Added freerdp-git, remote desktop client. Currently 2.0.0.rc2. wlfreerdp does not yet work. Tried multiple compile changes, none seem to work as of yet. xfreerdp works!
Changes committed:
	modified:   .gitmodules
	new file:   freerdp-git
	new file:   openh264-git

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "ibm-plex-fonts"]
 	path = ibm-plex-fonts
 	url = https://aur.archlinux.org/ibm-plex-fonts.git
+[submodule "freerdp-git"]
+	path = freerdp-git
+	url = https://aur.archlinux.org/freerdp-git.git
+[submodule "openh264-git"]
+	path = openh264-git
+	url = https://aur.archlinux.org/openh264-git.git
