Yuck. Did some things...
Changes committed:
	modified:   .gitmodules
	modified:   README.md
	new file:   dropbox-cli
	renamed:    sway-git -> meta_pkgs/sway/sway-git
	new file:   meta_pkgs/sway/wlc-git
	new file:   ncurses5-compat-libs
	new file:   nvm
	new file:   vim-youcompleteme-git

--- a/.gitmodules
+++ b/.gitmodules
@@ -29,5 +29,20 @@
 	path = openh264-git
 	url = https://aur.archlinux.org/openh264-git.git
 [submodule "sway-git"]
-	path = sway-git
+	path = meta_pkgs/sway/sway-git
 	url = https://aur.archlinux.org/sway-git.git
+[submodule "wlc-git"]
+	path = meta_pkgs/sway/wlc-git
+	url = https://aur.archlinux.org/wlc-git
+[submodule "nvm"]
+	path = nvm
+	url = https://aur.archlinux.org/nvm.git
+[submodule "vim-youcompleteme-git"]
+	path = vim-youcompleteme-git
+	url = https://aur.archlinux.org/vim-youcompleteme-git.git
+[submodule "ncurses5-compat-libs"]
+	path = ncurses5-compat-libs
+	url = https://aur.archlinux.org/ncurses5-compat-libs.git
+[submodule "dropbox-cli"]
+	path = dropbox-cli
+	url = https://aur.archlinux.org/dropbox-cli.git
