Dropbox and JupyterLab
Changes committed:
	modified:   gitmodules
	new file:   dropbox/dropbox
	renamed:    dropbox-cli -> /meta_pkgs/dropbox/dropbox-cli
	new file:   meta_pkgs/jupyterlab

Changes not staged for commit:
	modified:   1password-cli (untracked content)
	modified:   freerdp-git (modified content, untracked content)
	modified:   ghdl (untracked content)
	modified:   gnucash (untracked content)
	modified:   ibm-plex-fonts (untracked content)
	modified:   dropbox/dropbox-cli (untracked content)
	modified:   sway/sway-git (modified content)
	modified:   sway/wlc-git (modified content, untracked content)
	modified:   ncurses5-compat-libs (untracked content)
	modified:   oh-my-zsh-git (modified content, untracked content)
	modified:   openh264-git (modified content, untracked content)
	modified:   pacvis-git (untracked content)
	modified:   ttf-opensans (untracked content)
	modified:   vim-youcompleteme-git (modified content, untracked content)
	modified:   visual-studio-code-bin (new commits, untracked content)

 Untracked files:
	jfbview/
	jmtpfs/
	xrdp-git/

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,5 +44,11 @@
 	path = ncurses5-compat-libs
 	url = https://aur.archlinux.org/ncurses5-compat-libs.git
 [submodule "dropbox-cli"]
-	path = dropbox-cli
+	path = meta_pkgs/dropbox/dropbox-cli
 	url = https://aur.archlinux.org/dropbox-cli.git
+[submodule "meta_pkgs/dropbox/dropbox"]
+	path = meta_pkgs/dropbox/dropbox
+	url = https://aur.archlinux.org/dropbox.git
+[submodule "meta_pkgs/jupyter/jupyterlab"]
+	path = meta_pkgs/jupyter/jupyterlab
+	url = https://aur.archlinux.org/jupyterlab.git
